release 1.6
- Provided a workaround for issue 639
  http://java.net/jira/browse/JERSEY-639
  Jersey allows to hack HttpURLConnection class and injects (via reflection)
  HTTP method which will be used to "method" field. This approach disables
  method name control which is used in setMethod method. Users have to set
  URLConnectionClientHandler.PROPERTY_HTTP_URL_CONNECTION_SET_METHOD_WORKAROUND
  property to true to activate this workaround. There is also one know
  limitation - request can't contain entity when this code is executed.
- Jackson dependency upgrade: 1.5.5 -> 1.7.1
- Fixed issue 626
  http://java.net/jira/browse/JERSEY-626
  Skipping the leading CRLF for the first boundary delimiter in multipart
  messages.
- Fixed issue 637
  http://java.net/jira/browse/JERSEY-637
  Jersey now adds a whitespace after the semicolon separating the content
  type parameters.
- Grizzly 2 http-server support moved from the experimental
  area to the new jersey-grizzly2 module in the com.sun.jersey space
- *Breaking change*: Grizzly 1 support in a separate module
  Grizzly 1 support used to be part of the jersey-server module
  This is no longer the case. If you rely on Grizzly 1 you will
  need to use the jersey-grizzly dependency instead of just jersey-server 
- Re-fixed issue 320
  http://java.net/jira/browse/JERSEY-320
  Interning document parser needs to be used because of JAXB.
- *Breaking change*: Fixed issue 607
  http://java.net/jira/browse/JERSEY-607
  OAuthProvider is no longer registered using the init param property.
  It needs to be added as any other provider (e.g. by binding it).

release 1.5 (01-2011)
- Fixed issue 624
  http://java.net/jira/browse/JERSEY-624
  Async client API incorrectly handled TypeListener<ClientResponse>
- Fixed issue 620
  http://java.net/jira/browse/JERSEY-620
  Exceptions thrown by a nullary constructor of a resource were incorrectly
  handled.
- Fixed issue 615
  http://java.net/jira/browse/JERSEY-615